# pkap-screen-capture

./: .gitignore  CLAUDE.md  README.md  build.sh  make_icon.py
src/: index.html  main.js  overlay.html  overlay.js  preview.html  preview.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: capture.rs  commands.rs  lib.rs  main.rs  settings_store.rs  state.rs
